# semantic-nerf

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  vis_features.py
compression_block/: Dockerfile  check.py  compress_block.py  data.py  evaluation.py  losses.npy  training.py
compression_block/utils/: __init__.py  compress_block.py  data.py  evaluation.py  training.py
image_segmentation/: Dockerfile  gt_sam_features.py
mask_decoder/: Dockerfile  decode_masks.py  eval_metrics.py  test.sh
mask_decoder/dataset/: README.md
mask_decoder/lang_sam/: __init__.py  lang_sam.py  sam_imitate.py  utils.py
preresearch/: Dockerfile  README.md  segment_frames.py  vis_seg.py
preresearch/assets/: video2images.py
sam_nerf/: sam_nerf.py  sam_nerf_config.py  sam_nerf_fieldhead.py  sam_nerf_fieldheadname.py  sam_nerf_fields.py  sam_nerf_renderer.py
sam_nerf/data/: base_sam_dataparser.py  sam_dataset.py  sam_datatset.py  sam_nerf_dataparser.py
