[project]
name = "SAM_NeRF"
description = "Repository for thesis in nerfstudio."
version = "0.1.0"

dependencies = ["nerfstudio >= 0.3.0"] 

[tool.setuptools.packages.find]
include = ["sam_nerf*"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
method-template = 'sam_nerf.sam_nerf_config:sam_nerf_template'