[project]
name = "sam_nerf"
description = "Repository for thesis in nerfstudio."
version = "0.1.0"

dependencies = [
    "timm",
    "ftfy",
    "regex",
    "tqdm",
    "nerfstudio >= 0.3.0"
    ] 

[tool.setuptools.packages.find]
include = ["sam_nerf*"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
sam_nerf = 'sam_nerf.sam_nerf_config:sam_nerf_method'